# LeVizAudit

./: .gitignore  CLAUDE.md  README.md  calibrate.css  calibrate.js  calibration.html  pyproject.toml  research_report.md
examples/: bimanual.example.yaml  fake_lerobot_session.py  one_per_episode.example.yaml  pattern.example.yaml  run_demo.sh  stacking.example.yaml
scripts/: vizaudit_record.py
src/vizaudit/core/: __init__.py
src/vizaudit/overlay/: calibrate.py  cli.py  config.py  dataset_watcher.py  pattern.py  perspective.py  rerun_client.py  session.py
src/vizaudit/overlay/static/: calibrate.html
tests/fixtures/: fake_info.json
tests/overlay/: test_calibrate.py  test_config.py  test_dataset_watcher.py  test_pattern.py  test_perspective.py  test_rerun_client.py  test_session.py
